# shr-deb-config

./: Makefile.am  README  autogen.sh  configure.ac
conf/: Makefile.am
conf/generic/: Makefile.am
conf/generic/e/: Makefile.am  elementary.sh
conf/generic/fso/: Makefile.am
conf/generic/misc/: Makefile.am  gtkrc
conf/gta04/: Makefile.am
conf/gta04/e/: Makefile.am
conf/gta04/e/illume/: Makefile.am  e.src  profile.desktop
conf/gta04/fso/: Makefile.am  frameworkd.conf
conf/gta04/misc/: Makefile.am
conf/gta04/udev/: Makefile.am
conf/gta04/x11/: Makefile.am
debian/: changelog  control  copyright  rules  shr-config-gta04.install  shr-config.install  watch
